--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -8,4 +8,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Get Terraform version
-        run: ls -la
+        run: cat .terraform-version
