--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -7,5 +7,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      #- name: Get Terraform version
-        run: cat .terraform-version
+      - name: Get Terraform
+        run: brew install tfenv
+        run: tfenv install
+        run: terraform version
