--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -2,12 +2,10 @@ name: Terraform lint and validate
 on: [push]
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Get Terraform
-        run: brew install tfenv
-        run: tfenv install
-        run: terraform version
+        run: brew install tfenv && tfenv install && terraform version
