--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -13,5 +13,6 @@ jobs:
           tfenv install
       - name: verify tf version
         run: |
+          epxort PATH="/home/linuxbrew/.linuxbrew/bin/terraform:${PATH}"
           terraform version
           echo $PATH
