--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -17,7 +17,7 @@ jobs:
           terraform version
           echo $PATH
   get_tf_version:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
