--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -2,27 +2,8 @@ name: Terraform lint and validate
 on: [push]
 
 jobs:
-  lint_and_validate_with_tfenv:
-    runs-on: ubuntu-latest
-    steps:
 
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Get Terraform
-        run: |
-          brew install tfenv
-          tfenv install
-
-      - name: Lint and validate
-        run: |
-          # Make sure we find tfenv Terraform before the system one
-          export PATH="/home/linuxbrew/.linuxbrew/bin/:${PATH}"
-          terraform fmt -check
-          terraform init
-          terraform validate
-
-  lint_and_validat_with_setup_terraform:
+  lint_and_validate:
 
     runs-on: ubuntu-latest
     steps:
@@ -31,6 +12,7 @@ jobs:
         name: Checkout code
         uses: actions/checkout@v2
 
+        # Use tfenv's .terraform-version file to specify our version of Terraform
       - id: tfversion
         name: Get TF version
         run: echo "::set-output name=version::$(cat .terraform-version)"
@@ -41,10 +23,10 @@ jobs:
           terraform_version: ${{ steps.tfversion.outputs.version }}
 
       - name: Terraform Format
-        run: terraform fmt -check
+        run: terraform version && terraform fmt -check
 
       - name: Terraform Init
-        run: terraform init
+        run: terraform version && terraform init
 
       - name: Terraform Validate
-        run: terraform validate
+        run: terraform version && terraform validate
