--- a/.github/workflows/tflint.yml
+++ b/.github/workflows/tflint.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
 
-  lint_and_validate:
+  tflint:
 
     runs-on: ubuntu-latest
     steps:
@@ -24,9 +24,3 @@ jobs:
 
       - name: Terraform Format
         run: terraform fmt -check
-
-      - name: Terraform Init
-        run: terraform init
-
-      - name: Terraform Validate
-        run: terraform validate
